update service list
